--- a/zim-private/src/main/AndroidManifest.xml
+++ b/zim-private/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="im.zego.zim-private">
+    package="im.zego.zim_private">
 
 </manifest>
